--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "gh-pages": "^6.3.0",
+    "homepage": "https://harinimudaliar.github.io/MyPortfolio",
+    "scripts": {
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d dist"
+    },
     "globals": "^16.4.0",
     "vite": "^7.1.7"
   }
